welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: ';' expected but ')' found.
	id ( day==0 || day==6 )&& vacation==false ) {
                                                  ^